<resources>
<string name="binding_scroll_up">Scroll Up</string>
<string name="binding_scroll_down">Scroll Down</string>
<string name="vertical_scroll_bar">Vertical Scroll Bar</string>
    <string name="enable_profile_switching">Enable Profile Switching</string>
    <string name="profile_switching">Profile Switching</string>
    <string name="target_profile">Target Profile</string>
    <string name="switch_delay">Switch Delay</string>
    <string name="switch_delay_summary">Delay before switching profiles (0-3 seconds)</string>
    <string name="instant_switch">Instant</string>
    <string name="seconds">seconds</string>
    <string name="allow_profile_switching">Allow this button to switch between control profiles</string>
    <string name="select_target_profile">Select which profile to switch to when this button is pressed</string>
    <string name="show_activation_zone">Show Activation Zone</string>
    <string name="activation_zone_width">Activation Zone Width</string>
    <string name="activation_zone_height">Activation Zone Height</string>
    <string name="activation_zone_visual_settings">Activation Zone Visual Settings</string>
    <string name="show_activation_zone_in_editor">Show Activation Zone in Editor</string>
    <string name="adjust_zone_width">Adjust the width of the activation zone (50-600px)</string>
    <string name="adjust_zone_height">Adjust the height of the activation zone (50-600px)</string>
    <string name="display_activation_zone_boundaries">Display the activation zone boundaries in editor mode</string>
    <string name="dynamic_stick">Dynamic Stick</string>
    <string name="activation_radius">Activation Radius</string>
    <string name="stick_activation_zone">Stick Activation Zone</string>
    <string name="stick_active">Stick Active</string>
    <string name="custom_icon">Custom Icon</string>
    <string name="default_icons">Default Icons</string>
    <string name="select_custom_icon">Select Custom Icon</string>
    <string name="remove_custom_icon">Remove Custom Icon</string>
    <string name="custom_icon_set">Custom icon set</string>
    <string name="custom_icon_removed">Custom icon removed</string>
    <string name="error_loading_image">Error loading image</string>
    <string name="no_file_browser">No file browser available</string>
    <string name="icon_size">Icon Size</string>
    <string name="icon_size_summary">Adjust the size of the icon displayed on the control element</string>
    <string name="binding_1">Binding 1</string>
    <string name="binding_2">Binding 2</string>
    <string name="binding_3">Binding 3</string>
    <string name="binding_4">Binding 4</string>
    <string name="cpu_temperature">CPU Temperature</string>
    <string name="battery_temperature">Battery Temperature</string>
    <string name="battery_level">Battery Level</string>
    <string name="battery_power">Battery Power</string>
    <string name="fps_limit">Ограничение FPS</string>
    <string name="no_limit">Без ограничения</string>
    <string name="fps_limit_summary">Установите ограничение частоты кадров (0 = без ограничения)</string>
    <string name="mangohud_display">Отображение MangoHud</string>
    <string name="show_mangohud">Показывать MangoHud</string>
    <string name="mangohud_display_summary">Отключите для скрытия оверлея MangoHud (ограничение FPS продолжит работать)</string>
    <string name="frame_rating_settings">Frame Rating Settings</string>
    <string name="button_transparency">Button Transparency</string>
    <string name="display_elements">Display Elements</string>
    <string name="show_renderer">Show Renderer</string>
    <string name="show_gpu">Show GPU</string>
    <string name="show_ram">Show RAM</string>
    <string name="layout_orientation">Layout Orientation</string>
    <string name="vertical_layout">Vertical</string>
    <string name="horizontal_layout">Horizontal</string>
    <string name="transparency_settings">Transparency Settings</string>
    <string name="background_transparency">Background</string>
    <string name="text_transparency">Text</string>
    <string name="wine_dxvk">Wine/DXVK</string>
    <string name="app_name">Winlator HDroidX</string>
    <string name="run">Run</string>
    <string name="edit">Edit</string>
    <string name="ai_config">AI Config</string>
    <string name="ai_config_game">Game / Workload</string>
    <string name="ai_config_download_drivers">Download / Update Graphics Drivers</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="shortcuts">Shortcuts</string>
    <string name="containers">Containers</string>
    <string name="input_controls">Input Controls</string>
    <string name="no_items_to_display">No items to display</string>
    <string name="new_container">New Container</string>
    <string name="edit_container">Edit Container</string>
    <string name="creating_container">Creating Container…</string>
    <string name="removing_container">Removing Container…</string>
    <string name="duplicating_container">Duplicating Container…</string>
    <string name="installing_system_files">Installing System Files…</string>
    <string name="updating_system_files">Updating System Files…</string>
    <string name="starting_up">Starting up…</string>
    <string name="unable_to_install_system_files">Unable to install system files</string>
    <string name="keyboard">Keyboard</string>
    <string name="toggle_fullscreen">Toggle Fullscreen</string>
    <string name="exit">Exit</string>
    <string name="no_control_element_selected">No control element selected</string>
    <string name="scale">Scale</string>
    <string name="shape">Shape</string>
    <string name="type">Type</string>
    <string name="binding">Binding</string>
    <string name="binding_up">Binding Up</string>
    <string name="binding_right">Binding Right</string>
    <string name="binding_down">Binding Down</string>
    <string name="binding_left">Binding Left</string>
    <string name="overlay_opacity">Overlay Opacity</string>
    <string name="profile">Profile</string>
    <string name="select_profile">Select Profile</string>
    <string name="profile_name">Profile Name</string>
    <string name="name">Name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="untitled">Untitled</string>
    <string name="no_profile_selected">No profile selected</string>
    <string name="no_profile_found">No profile found</string>
    <string name="do_you_want_to_remove_this_profile">Do you want to remove this profile?</string>
    <string name="do_you_want_to_duplicate_this_profile">Do you want to duplicate this profile?</string>
    <string name="do_you_want_to_duplicate_this_preset">Do you want to duplicate this preset?</string>
    <string name="do_you_want_to_remove_this_container">Do you want to remove this container?</string>
    <string name="do_you_want_to_duplicate_this_container">Do you want to duplicate this container?</string>
    <string name="do_you_want_to_remove_this_shortcut">Do you want to remove this shortcut?</string>
    <string name="do_you_want_to_remove_this_controller">Do you want to remove this controller?</string>
    <string name="do_you_want_to_remove_this_wine_version">Do you want to remove this wine version?</string>
    <string name="do_you_want_to_remove_this_preset">Do you want to remove this preset?</string>
    <string name="do_you_want_to_end_this_process">Do you want to end this process?</string>
    <string name="controls_editor">Controls Editor</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="container">Container</string>
    <string name="screen_size">Screen Size</string>
    <string name="new_environment_variable">New Environment Variable</string>
    <string name="environment_variables">Environment Variables</string>
    <string name="value">Value</string>
    <string name="processor_affinity">Processor Affinity</string>
    <string name="processor_affinity_32_bit_apps">Processor Affinity (32-bit apps)</string>
    <string name="cursor_speed">Cursor Speed</string>
    <string name="relative_mouse_movement">Relative Mouse Movement</string>
    <string name="toggle_switch">Toggle Switch</string>
    <string name="profile_exported_to">Profile exported to</string>
    <string name="unable_to_import_profile">Unable to import profile</string>
    <string name="wine_configuration">Wine Configuration</string>
    <string name="registry_keys">Registry Keys</string>
    <string name="csmt">CSMT (Command Stream Multi-Thread)</string>
    <string name="gpu_name">GPU Name</string>
    <string name="offscreen_rendering_mode">Offscreen Rendering Mode</string>
    <string name="strict_shader_math">Strict Shader Math</string>
    <string name="video_memory_size">Video Memory Size</string>
    <string name="show_fps">Show FPS</string>
    <string name="none">None</string>
    <string name="custom_text">Custom Text</string>
    <string name="icon">Icon</string>
    <string name="import_profile">Import Profile</string>
    <string name="export_profile">Export Profile</string>
    <string name="touchpad_help">Touchpad Help</string>
    <string name="touchpad_help_mouse_left_click_title">Mouse Left-Click</string>
    <string name="touchpad_help_mouse_left_click_description">Short tap with one finger</string>
    <string name="touchpad_help_mouse_right_click_title">Mouse Right-Click</string>
    <string name="touchpad_help_mouse_right_click_description">Tap with one finger and short tap with another finger</string>
    <string name="touchpad_help_mouse_scroll_wheel_title">Mouse Scroll Wheel</string>
    <string name="touchpad_help_mouse_scroll_wheel_description">Two fingers tap and move</string>
    <string name="touchpad_help_main_menu_title">Main Menu</string>
    <string name="touchpad_help_main_menu_description">Four fingers tap</string>
    <string name="duplicate">Duplicate</string>
    <string name="about">About</string>
    <string name="credits_and_third_party_apps">Credits and Third-party apps</string>
    <string name="external_controllers">External Controllers</string>
    <string name="graphics_driver">Graphics Driver</string>
    <string name="audio_driver">Audio Driver</string>
    <string name="loading">Loading…</string>
    <string name="press_any_button_on_your_controller">Press any button on your controller</string>
    <string name="bindings">bindings</string>
    <string name="show_touchscreen_controls">Show Touchscreen Controls</string>
    <string name="dxwrapper">DX Wrapper</string>
    <string name="mouse_warp_override">Mouse Warp Override</string>
    <string name="direct3d">Direct3D</string>
    <string name="directsound">DirectSound</string>
    <string name="directmusic">DirectMusic</string>
    <string name="directplay">DirectPlay</string>
    <string name="directshow">DirectShow</string>
    <string name="directx">DirectX</string>
    <string name="xaudio">XAudio</string>
    <string name="vcrun2010">Visual C++ 2010</string>
    <string name="opengl">OpenGL</string>
    <string name="settings">Settings</string>
    <string name="exec_arguments">Exec Arguments</string>
    <string name="win_components">Win Components</string>
    <string name="drives">Drives</string>
    <string name="range">Range</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="force">Force</string>
    <string name="installed_wine">Installed Wine</string>
    <string name="install_wine">Install Wine</string>
    <string name="arch">Arch</string>
    <string name="version">Version</string>
    <string name="dxvk_version">DXVK Version</string>
    <string name="vkd3d_version">VKD3D Version</string>
    <string name="unable_to_install_wine">Unable to install Wine</string>
    <string name="add_to_home_screen">Add to Home Screen</string>
</resources>